# binarymcp

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  install.sh
backend/: Dockerfile  requirements.txt
backend/app/: main.py
frontend/: nginx.conf  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/src/: App.tsx  index.css  main.tsx
ida-bridge/: Dockerfile
idamcp/: README.md  mcp_bridge.py  pyproject.toml
idamcp/scripts/: ida_server.py
pwnmcp/: .env.backend  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  server.py  start.sh
pwnmcp/backend/: requirements.txt
pwnmcp/dynamic/: executor.py
pwnmcp/frontend/: nginx.conf  package.json  vite.config.ts
pwnmcp/ida-bridge/: bridge.py
pwnmcp/pwnmcp/: __init__.py  __main__.py  server.py
vmmcp/: .env  Dockerfile  docker-compose.yml  install_vm.sh  mcp_config_example.json  pyproject.toml  start_sse.sh
vmmcp/backend/: Dockerfile
vmmcp/backend/app/: auth.py  config.py  main.py  models.py  schemas.py
vmmcp/backend/app/model_router/: prompts.py
vmmcp/backend/app/routers/: keys.py
vmmcp/backend/app/scanner/: engine.py  patterns.py
vmmcp/frontend/: index.html
vmmcp/frontend/src/api/: client.ts
vmmcp/frontend/src/auth/: AuthContext.tsx
vmmcp/frontend/src/components/: Layout.tsx
vmmcp/frontend/src/pages/: Home.tsx  Leaderboard.tsx
vmmcp/pwnmcp/: server.py
vmmcp/pwnmcp/core/: exceptions.py
vmmcp/pwnmcp/dynamic/: __init__.py
vmmcp/pwnmcp/gdb/: controller.py
vmmcp/pwnmcp/static/: __init__.py  analyzer.py  models.py
wslmcp/: .gitignore  install.ps1  install.sh  mcp_config_example.json  start_windows.bat
(+88 files in other folders)
